--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "displayName": "Homebridge Netatmo Rain Sensor",
-  "name": "homebridge-plugin-netatmo-rain-sensor",
+  "displayName": "Homebridge Netatmo Wind Sensor",
+  "name": "homebridge-plugin-netatmo-wind-sensor",
   "version": "2.1.1",
-  "description": "This Homebridge Plugin makes the Netatmo Rain Sensor accessible to HomeKit as a Switch. This makes it possible to use the Netatmo Rain Sensor for all kinds of automations based on rain detection.",
+  "description": "This Homebridge Plugin makes the Netatmo Wind Sensor accessible to HomeKit as a Switch. This makes it possible to use the Netatmo Rain Sensor for all kinds of automations based on rain detection.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chefhl/homebridge-plugin-netatmo-rain-sensor.git"
+    "url": "https://github.com/martijnmnnk/homebridge-plugin-netatmo-wind-sensor.git"
   },
   "bugs": {
-    "url": "https://github.com/chefhl/homebridge-plugin-netatmo-rain-sensor/issues"
+    "url": "https://github.com/martijnmnnk/homebridge-plugin-netatmo-wind-sensor/issues"
   },
   "engines": {
     "node": ">=10.17.0",
